--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
     "google-spreadsheet": "^4.1.4",
     "googleapis": "^128.0.0",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "bcryptjs": "^2.4.3",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
     "morgan": "^1.10.0",
     "next": "^14.0.3",
     "node-cron": "^3.0.3",
