--- a/package.json
+++ b/package.json
@@ -29,18 +29,18 @@
   "dependencies": {
     "@types/uuid": "^10.0.0",
     "axios": "^1.10.0",
+    "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
     "google-auth-library": "^9.15.1",
     "google-spreadsheet": "^4.1.4",
     "googleapis": "^128.0.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "bcryptjs": "^2.4.3",
-    "express-rate-limit": "^7.1.5",
-    "express-validator": "^7.0.1",
     "morgan": "^1.10.0",
     "next": "^14.0.3",
     "node-cron": "^3.0.3",
@@ -52,11 +52,13 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/bcryptjs": "^2.4.6",
+    "@types/express-rate-limit": "^5.1.3",
+    "@types/express-validator": "^2.20.33",
     "@types/jest": "^29.5.8",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.10.0",
     "@types/node-cron": "^3.0.11",
