--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "dev": "ts-node src/index.ts",
     "watch": "ts-node --watch src/index.ts",
     "test": "jest",
+    "test:unit": "jest --testPathPattern=tests/unit",
+    "test:integration": "jest --testPathPattern=tests/integration",
+    "test:e2e": "jest --testPathPattern=tests/e2e",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watch",
+    "test:runner": "node tests/test-runner.js",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "typecheck": "tsc --noEmit",
@@ -64,10 +70,12 @@
     "@types/node-cron": "^3.0.11",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "eslint": "^8.54.0",
     "jest": "^29.7.0",
+    "supertest": "^7.1.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
