--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
+    "express-prom-bundle": "^8.0.0",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
     "google-auth-library": "^9.15.1",
@@ -50,12 +51,15 @@
     "morgan": "^1.10.0",
     "next": "^14.0.3",
     "node-cron": "^3.0.3",
+    "prom-client": "^15.1.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "sqlite3": "^5.1.6",
     "twitter-api-v2": "^1.23.2",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
