--- a/.gitignore
+++ b/.gitignore
@@ -4,83 +4,63 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Production builds
-dist/
-build/
-.next/
-
-# Environment variables
+# Environment files
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# Database
-database/*.db
-database/*.sqlite
-database/*.sqlite3
+# Build outputs
+dist/
+build/
 
-# Logs
+# Database files
+database/*.db
+
+# Log files
 logs/
 *.log
 
-# Runtime data
-pids/
-*.pid
-*.seed
-*.pid.lock
-
-# Coverage directory used by tools like istanbul
+# Test coverage
 coverage/
-.nyc_output/
-
-# Dependency directories
-jspm_packages/
-
-# Optional npm cache directory
-.npm
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# dotenv environment variables file
-.env
 
 # IDE files
 .vscode/
 .idea/
 *.swp
 *.swo
-*~
 
 # OS files
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
 
 # Temporary files
 tmp/
 temp/
 
-# Jest coverage
-coverage/
+# Runtime files
+*.pid
+*.seed
+*.pid.lock
 
-# TypeScript
-*.tsbuildinfo
+# Optional npm cache directory
+.npm
 
-# Optional eslint cache
+# ESLint cache
 .eslintcache
+
+# Next.js build output
+.next/
+out/
+
+# Parcel-bundler cache
+.cache
+.parcel-cache
+
+# Storybook build outputs
+.out
+.storybook-out
 
 # Microbundle cache
 .rpt2_cache/
@@ -88,33 +68,7 @@ coverage/
 .rts2_cache_es/
 .rts2_cache_umd/
 
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# parcel-bundler cache (https://parceljs.org/)
-.cache
-.parcel-cache
-
-# Next.js build output
-.next
-
-# Nuxt.js build / generate output
-.nuxt
-dist
-
-# Storybook build outputs
-.out
-.storybook-out
-
-# Temporary folders
-tmp/
-temp/
-
-# keys and certificates
-techcheckdeck-18c932509f15.json
+# Rush temporary files
+common/deploy/
+common/temp/
+common/autoinstallers/*/.npmrc
